Remove bottom padding from photo gallery grid and add bottom margin to section container instead to test if causes caption spacing bug on ipad mini

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -413,6 +413,7 @@ https://stackoverflow.com/questions/55347359/why-is-css-grid-row-height-differen
 */ 
 #page-container {
     display: grid; 
+    margin-bottom: 5%; 
 }
 
 #gallery-container {
@@ -446,7 +447,6 @@ https://stackoverflow.com/questions/55347359/why-is-css-grid-row-height-differen
     grid-template-rows: repeat(24, auto); 
     height: 100%; 
     margin: 0 auto; 
-    padding-bottom: 5%; 
     row-gap: 35px; 
     width: 90%;  
 } 
